--- a/_source/LigaCancer/Views/Patient/Details.cshtml
+++ b/_source/LigaCancer/Views/Patient/Details.cshtml
@@ -39,10 +39,10 @@
                     <div class="col-lg-5 d-flex flex-column">
                         <div class="card h-100">
                             <div class="card-header">
-                                <i class="fa fa-clipboard"></i> Perfil
+                                <span class="fa fa-clipboard"></span> Perfil
                                 <a id="editPatientButton" asp-action="EditPatientProfile" asp-controller="Patient" asp-route-id="@Model.PatientId"
                                    data-toggle='modal' data-target='#modal-action' data-title='Editar Paciente' class='btn btn-sm btn-primary float-right'>
-                                    <i class='fas fa-edit'></i> Editar Perfil
+                                    <span class='fas fa-edit'></span> Editar Perfil
                                 </a>
                             </div>
 
@@ -153,11 +153,11 @@
                     <div class="col-7">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fa fa-info"></i>Informações do Paciente
+                                <span class="fa fa-info"></span>Informações do Paciente
 
                                 <a id="editPatientInformationButton" asp-action="EditPatientInformation" asp-controller="Patient" asp-route-id="@Model.PatientInformationId"
                                    data-toggle='modal' data-target='#modal-action' data-title='Editar Informações' class='btn btn-sm btn-primary float-right'>
-                                    <i class='fas fa-edit'></i> Editar Informação
+                                    <span class='fas fa-edit'></span> Editar Informação
                                 </a>
                             </div>
                             <div class="card-body">
@@ -225,11 +225,11 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <i class="fa fa-globe-americas"></i>Naturalidade
+                                <span class="fa fa-globe-americas"></span>Naturalidade
 
                                 <a id="editNaturalityButton" asp-action="EditPatientNaturality" asp-controller="Patient" asp-route-id="@Model.NaturalityId"
                                    data-toggle='modal' data-target='#modal-action' data-title='Editar Naturalidade' class='btn btn-sm btn-primary float-right'>
-                                    <i class='fas fa-edit'></i> Editar Naturalidade
+                                    <span class='fas fa-edit'></span> Editar Naturalidade
                                 </a>
                             </div>
                             <div class="card-body">
