--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -30,10 +30,10 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fas fa-filter"></i> Pesquisar
+                                <span class="fas fa-filter"></span> Pesquisar
                                 <div class="card-header-actions">
                                     <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#filterCollapse" aria-expanded="true">
-                                        <i class="fa fa-minus"></i>
+                                        <span class="fa fa-minus"></span>
                                     </a>
                                 </div>
                             </div>
@@ -154,10 +154,10 @@
                                         </div>
 
                                         <button type="reset" class="btn btn-secondary">
-                                            <i class="fas fa-eraser"></i> Limpar
+                                            <span class="fas fa-eraser"></span> Limpar
                                         </button>
                                         <button type="submit" class="btn btn-primary">
-                                            <i class="fas fa-filter"></i> Filtrar
+                                            <span class="fas fa-filter"></span> Filtrar
                                         </button>
                                     </div>
                                 </form>
@@ -166,14 +166,14 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <i class="fa fa-male"></i> Pacientes
+                                <span class="fa fa-male"></span> Pacientes
                             </div>
                             <div class="card-body">
                                 @if (!User.IsInRole(Roles.SocialAssistance))
                                 {
                                     <div class="form-inline float-right">
                                         <a id="addPatientButton" asp-action="AddPatientProfile" data-title="Adicionar Paciente" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
-                                            <i class="fa fa-plus"></i> Adicionar Paciente
+                                            <span class="fa fa-plus"></span> Adicionar Paciente
                                         </a>
                                     </div>
                                 }
