--- a/_source/LigaCancer/Views/Patient/Print.cshtml
+++ b/_source/LigaCancer/Views/Patient/Print.cshtml
@@ -11,6 +11,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta NAME="robots" CONTENT="noindex,nofollow">
+    <title>Paciente @Model.FullName</title>
 
     <environment names="Development">
         <link href="~/dist/css/common.bundle.css" rel="stylesheet" />
