--- a/_source/LigaCancer/Views/Presence/Partials/_EditPresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/Partials/_EditPresence.cshtml
@@ -19,7 +19,7 @@
                 <input asp-for="Time" type="text" class="form-control datetimepicker-input" data-target="#timePicker" />
                 <div class="input-group-append" data-target="#timePicker" data-toggle="datetimepicker">
                     <div class="input-group-text">
-                        <i class="far fa-clock"></i>
+                        <span class="far fa-clock"></span>
                     </div>
                 </div>
             </div>
