--- a/_source/LigaCancer/Views/SaleShirt2020/Partials/_SearchForm.cshtml
+++ b/_source/LigaCancer/Views/SaleShirt2020/Partials/_SearchForm.cshtml
@@ -17,10 +17,10 @@
         </div>
         <div class="col-lg-3 filter-button">
             <button type="reset" class="btn btn-secondary">
-                <i class="fas fa-eraser"></i> Limpar
+                <span class="fas fa-eraser"></span> Limpar
             </button>
             <button type="submit" class="btn btn-primary">
-                <i class="fas fa-filter"></i> Filtrar
+                <span class="fas fa-filter"></span> Filtrar
             </button>
         </div>
     </div>
