--- a/_source/LigaCancer/Views/Stay/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Stay/Partials/_Index.cshtml
@@ -1,10 +1,10 @@
 ﻿<div class="card">
     <div class="card-header" data-toggle="collapse" data-target="#stayCollapse" aria-expanded="true">
-        <i class="fa fa-male"></i>Estadias
+        <span class="fa fa-male"></span>Estadias
 
         <div class="card-header-actions">
             <a class="card-header-action btn-minimize" href="#">
-                <i class="fa fa-minus"></i>
+                <span class="fa fa-minus"></span>
             </a>
         </div>
     </div>
