--- a/_source/LigaCancer/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -25,7 +25,7 @@
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">
-                                    <i class="fa fa-user"></i>
+                                    <span class="fa fa-user"></span>
                                 </span>
                             </div>
                             <input asp-for="ForgotPassword.Email" type="email" class="form-control" placeholder="Email">
