--- a/_source/LigaCancer/Areas/Identity/Pages/Account/Login.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/Login.cshtml
@@ -33,7 +33,7 @@
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">
-                                    <i class="fa fa-user"></i>
+                                    <span class="fa fa-user"></span>
                                 </span>
                             </div>
                             <input asp-for="Login.Email" type="email" class="form-control" placeholder="Email">
@@ -45,11 +45,11 @@
                         <div class="input-group mt-2">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">
-                                    <i class="fa fa-passport"></i>
+                                    <span class="fa fa-passport"></span>
                                 </span>
                             </div>
                             <input asp-for="Login.Password" type="password" class="form-control" placeholder="Senha" id="password">
-                            <i class="eye-password fas fa-eye-slash eyePassword"></i>
+                            <span class="eye-password fas fa-eye-slash eyePassword"></span>
                         </div>
                         <span asp-validation-for="Login.Password" class="text-danger ml-5"></span>
                     </div>
