--- a/_source/LigaCancer/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -31,7 +31,7 @@
                     <div class="col-lg-6 offset-lg-3">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fas fa-user-md"></i> Trocar senha
+                                <span class="fas fa-user-md"></span> Trocar senha
                             </div>
                             <div class="card-body">
                                 <div class="row">
@@ -41,7 +41,7 @@
                                                 <label asp-for="Input.OldPassword"></label>
                                                 <div class="input-group mt-2">
                                                     <input asp-for="Input.OldPassword" type="password" class="form-control" placeholder="Senha">
-                                                    <i class="eye-password fas fa-eye-slash eyePassword"></i>
+                                                    <span class="eye-password fas fa-eye-slash eyePassword"></span>
                                                 </div>
                                                 <span asp-validation-for="Input.OldPassword" class="text-danger ml-5"></span>
                                             </div>
@@ -50,7 +50,7 @@
                                                 <label asp-for="Input.NewPassword"></label>
                                                 <div class="input-group mt-2">
                                                     <input asp-for="Input.NewPassword" type="password" class="form-control" placeholder="Senha">
-                                                    <i class="eye-password fas fa-eye-slash eyePassword"></i>
+                                                    <span class="eye-password fas fa-eye-slash eyePassword"></span>
                                                 </div>
                                                 <span asp-validation-for="Input.NewPassword" class="text-danger ml-5"></span>
                                             </div>
@@ -58,7 +58,7 @@
                                                 <label asp-for="Input.ConfirmPassword"></label>
                                                 <div class="input-group mt-2">
                                                     <input asp-for="Input.ConfirmPassword" type="password" class="form-control" placeholder="Senha">
-                                                    <i class="eye-password fas fa-eye-slash eyePassword"></i>
+                                                    <span class="eye-password fas fa-eye-slash eyePassword"></span>
                                                 </div>
                                                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger ml-5"></span>
                                             </div>
