--- a/_source/LigaCancer/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/_source/LigaCancer/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -26,7 +26,7 @@
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">
-                                    <i class="fa fa-user"></i>
+                                    <span class="fa fa-user"></span>
                                 </span>
                             </div>
                             <input asp-for="ResetPassword.Email" type="email" class="form-control" placeholder="Email">
@@ -38,11 +38,11 @@
                         <div class="input-group mt-2">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">
-                                    <i class="fa fa-passport"></i>
+                                    <span class="fa fa-passport"></span>
                                 </span>
                             </div>
                             <input asp-for="ResetPassword.Password" type="password" class="form-control" placeholder="Senha">
-                            <i class="eye-password fas fa-eye-slash eyePassword"></i>
+                            <span class="eye-password fas fa-eye-slash eyePassword"></span>
                         </div>
                         <span asp-validation-for="ResetPassword.Password" class="text-danger ml-5"></span>
                     </div>
@@ -51,11 +51,11 @@
                         <div class="input-group mt-2">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">
-                                    <i class="fa fa-passport"></i>
+                                    <span class="fa fa-passport"></span>
                                 </span>
                             </div>
                             <input asp-for="ResetPassword.ConfirmPassword" type="password" class="form-control" placeholder="Confirmação senha">
-                            <i class="eye-password fas fa-eye-slash eyePassword"></i>
+                            <span class="eye-password fas fa-eye-slash eyePassword"></span>
                         </div>
                         <span asp-validation-for="ResetPassword.ConfirmPassword" class="text-danger ml-5"></span>
                     </div>
