--- a/_source/LigaCancer/Views/Address/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Address/Partials/_Index.cshtml
@@ -3,11 +3,11 @@
 
 <div class="card">
     <div class="card-header" data-toggle="collapse" data-target="#addressCollapse" aria-expanded="true">
-        <i class="fa fa-male"></i>Endereços
+        <span class="fa fa-male"></span>Endereços
 
         <div class="card-header-actions">
             <a class="card-header-action btn-minimize" href="#">
-                <i class="fa fa-minus"></i>
+                <span class="fa fa-minus"></span>
             </a>
 
         </div>
@@ -20,7 +20,7 @@
             <div class="form-inline float-right">
                 <a id="addAddressButton" asp-action="AddAddress" asp-controller="Address" asp-route-id="@Model.PatientId" data-title="Adicionar Endereço" class="btn btn-primary"
                    data-toggle="modal" data-target="#modal-action">
-                    <i class="fa fa-plus"></i> Adicionar Endereço
+                    <span class="fa fa-plus"></span> Adicionar Endereço
                 </a>
             </div>
         }
