--- a/_source/LigaCancer/Views/Admin/Index.cshtml
+++ b/_source/LigaCancer/Views/Admin/Index.cshtml
@@ -29,7 +29,7 @@
                     <div class="col-lg-6">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fas fa-cog"></i> Admin
+                                <span class="fas fa-cog"></span> Admin
                             </div>
                             <div class="card-body">
                                 <partial name="Partials/_FormAdmin" />
