--- a/_source/LigaCancer/Views/Birthday/Index.cshtml
+++ b/_source/LigaCancer/Views/Birthday/Index.cshtml
@@ -1,14 +1,14 @@
-﻿@model RVCC.Models.SearchModel.StaySearchModel
+﻿@model RVCC.Models.SearchModel.BirthdaySearchModel
 @{
-    ViewData["Title"] = "Estadias";
+    ViewData["Title"] = "Aniversariantes";
 }
 
 @section styles {
     <environment names="Development">
-        <link href="~/dist/css/stay.bundle.css" rel="stylesheet" />
+        <link href="~/dist/css/birthday.bundle.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
-        <link href="~/dist/css/stay.bundle.css" asp-append-version="true" rel="stylesheet" />
+        <link href="~/dist/css/birthday.bundle.css" asp-append-version="true" rel="stylesheet" />
     </environment>
 }
 
@@ -18,7 +18,7 @@
             <a asp-controller="Home" asp-action="Index">Home</a>
         </li>
         <li class="breadcrumb-item">
-            Estadias
+            Aniversariantes
         </li>
     </ol>
     <div class="container-fluid">
@@ -44,28 +44,15 @@
                                             <span asp-validation-for="Name" class="text-danger"></span>
                                         </div>
                                         <div class="col-lg-3">
-                                            <label asp-for="City"></label>
-                                            <input asp-for="City" class="form-control" />
-                                            <span asp-validation-for="City" class="text-danger"></span>
+                                            <label asp-for="Month"></label>
+                                            <input asp-for="Month" type="text" class="form-control" />
+                                            <span asp-validation-for="Month" class="text-danger"></span>
                                         </div>
-                                        <div class="col-lg-3">
-                                            <label asp-for="DateFrom"></label>
-                                            <input asp-for="DateFrom" type="text" class="form-control" />
-                                            <span asp-validation-for="DateFrom" class="text-danger"></span>
-                                        </div>
-                                        <div class="col-lg-3">
-                                            <label asp-for="DateTo"></label>
-                                            <input asp-for="DateTo" type="text" class="form-control" />
-                                            <span asp-validation-for="DateTo" class="text-danger"></span>
-                                        </div>
-                                    </div>
-                                    
-                                    <div class="form-row form-group justify-content-end">
-                                        <div class="col-lg-3 d-flex justify-content-end">
+                                        <div class="col-lg-3 filter-button">
                                             <button type="reset" class="btn btn-secondary">
                                                 <span class="fas fa-eraser"></span> Limpar
                                             </button>
-                                            <button type="submit" class="btn btn-primary ml-1">
+                                            <button type="submit" class="btn btn-primary">
                                                 <span class="fas fa-filter"></span> Filtrar
                                             </button>
                                         </div>
@@ -76,18 +63,11 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <span class="fas fa-address-book"></span> Estadias
+                                <span class="fas fa-address-book"></span> Aniversariantes
                             </div>
                             <div class="card-body">
-                                <div class="form-inline float-right">
-                                    <a id="addStayButton" asp-action="AddStay" data-title="Adicionar Estadia" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
-                                        <span class="fa fa-plus"></span> Adicionar Estadia
-                                    </a>
-                                </div>
-
-                                <table width="100%" class="table table-bordered table-striped text-center" id="stayTable"></table>
+                                <table width="100%" class="table table-bordered table-striped text-center" id="birthdayTable"></table>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -101,13 +81,11 @@
     <!-- /.container-fluid -->
 </main>
 
-<partial name="_Modal" />
-
 @section scripts {
     <environment names="Development">
-        <script src="~/dist/js/stay.bundle.js"></script>
+        <script src="~/dist/js/birthday.bundle.js"></script>
     </environment>
     <environment exclude="Development">
-        <script src="~/dist/js/stay.bundle.js" asp-append-version="true"></script>
+        <script src="~/dist/js/birthday.bundle.js" asp-append-version="true"></script>
     </environment>
 }
