--- a/_source/LigaCancer/Views/FileAttachment/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FileAttachment/Partials/_Index.cshtml
@@ -2,11 +2,11 @@
 
 <div class="card">
     <div class="card-header" data-toggle="collapse" data-target="#filesCollapse" aria-expanded="true">
-        <i class="fa fa-male"></i>Arquivos
+        <span class="fa fa-male"></span>Arquivos
 
         <div class="card-header-actions">
             <a class="card-header-action btn-minimize" href="#">
-                <i class="fa fa-minus"></i>
+                <span class="fa fa-minus"></span>
             </a>
         </div>
 
@@ -16,7 +16,7 @@
         <div class="form-inline float-right">
             <a id="addFileButton" asp-action="FileUpload" asp-controller="FileAttachment" asp-route-id="@Model.PatientId" data-title="Adicionar Arquivos" class="btn btn-primary"
                data-toggle="modal" data-target="#modal-action">
-                <i class="fa fa-plus"></i> Adicionar Arquivos
+                <span class="fa fa-plus"></span> Adicionar Arquivos
             </a>
         </div>
 
