--- a/_source/LigaCancer/Views/PatientBenefit/Index.cshtml
+++ b/_source/LigaCancer/Views/PatientBenefit/Index.cshtml
@@ -28,10 +28,10 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fas fa-filter"></i> Pesquisar
+                                <span class="fas fa-filter"></span> Pesquisar
                                 <div class="card-header-actions">
                                     <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#filterCollapse" aria-expanded="true">
-                                        <i class="fa fa-minus"></i>
+                                        <span class="fa fa-minus"></span>
                                     </a>
                                 </div>
                             </div>
@@ -63,10 +63,10 @@
                                     <div class="form-row form-group justify-content-end">
                                         <div class="col-lg-3 d-flex justify-content-end">
                                             <button type="reset" class="btn btn-secondary">
-                                                <i class="fas fa-eraser"></i> Limpar
+                                                <span class="fas fa-eraser"></span> Limpar
                                             </button>
                                             <button type="submit" class="btn btn-primary ml-1">
-                                                <i class="fas fa-filter"></i> Filtrar
+                                                <span class="fas fa-filter"></span> Filtrar
                                             </button>
                                         </div>
                                     </div>
@@ -76,12 +76,12 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <i class="fas fa-address-book"></i> @ViewData["Title"]
+                                <span class="fas fa-address-book"></span> @ViewData["Title"]
                             </div>
                             <div class="card-body">
                                 <div class="form-inline float-right">
                                     <a id="addPatientBenefitButton" asp-action="AddPatientBenefit" data-title="Adicionar Paciente Benefícios " data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
-                                        <i class="fa fa-plus"></i> Adicionar Benefício de Paciente
+                                        <span class="fa fa-plus"></span> Adicionar Benefício de Paciente
                                     </a>
                                 </div>
 
