--- a/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
@@ -3,11 +3,11 @@
 
 <div class="card">
     <div class="card-header" data-toggle="collapse" data-target="#phoneCollapse" aria-expanded="true">
-        <i class="fa fa-male"></i>Telefones
+        <span class="fa fa-male"></span>Telefones
 
         <div class="card-header-actions">
             <a class="card-header-action btn-minimize" href="#">
-                <i class="fa fa-minus"></i>
+                <span class="fa fa-minus"></span>
             </a>
         </div>
 
@@ -20,7 +20,7 @@
             <div class="form-inline float-right">
                 <a id="addPhoneButton" asp-action="AddPhone" asp-controller="Phone" asp-route-id="@Model.PatientId" data-title="Adicionar Telefone" class="btn btn-primary"
                    data-toggle="modal" data-target="#modal-action">
-                    <i class="fa fa-plus"></i> Adicionar Telefone
+                    <span class="fa fa-plus"></span> Adicionar Telefone
                 </a>
             </div>
         }
