--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -28,10 +28,10 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fas fa-filter"></i> Pesquisar
+                                <span class="fas fa-filter"></span> Pesquisar
                                 <div class="card-header-actions">
                                     <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#filterCollapse" aria-expanded="true">
-                                        <i class="fa fa-minus"></i>
+                                        <span class="fa fa-minus"></span>
                                     </a>
                                 </div>
                             </div>
@@ -55,10 +55,10 @@
                                         </div>
                                         <div class="col-lg-3 filter-button">
                                             <button type="reset" class="btn btn-secondary">
-                                                <i class="fas fa-eraser"></i> Limpar
+                                                <span class="fas fa-eraser"></span> Limpar
                                             </button>
                                             <button type="submit" class="btn btn-primary">
-                                                <i class="fas fa-filter"></i> Filtrar
+                                                <span class="fas fa-filter"></span> Filtrar
                                             </button>
                                         </div>
                                     </div>
@@ -68,12 +68,12 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <i class="fas fa-address-book"></i> Presenças
+                                <span class="fas fa-address-book"></span> Presenças
                             </div>
                             <div class="card-body">
                                 <div class="form-inline float-right">
                                     <a id="addPresenceButton" asp-action="AddPresence" data-title="Adicionar Presença" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
-                                        <i class="fa fa-plus"></i> Adicionar Presença
+                                        <span class="fa fa-plus"></span> Adicionar Presença
                                     </a>
                                 </div>
 
