--- a/_source/LigaCancer/Views/SaleShirt2020/Index.cshtml
+++ b/_source/LigaCancer/Views/SaleShirt2020/Index.cshtml
@@ -30,10 +30,10 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fas fa-filter"></i> Pesquisar
+                                <span class="fas fa-filter"></span> Pesquisar
                                 <div class="card-header-actions">
                                     <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#filterCollapse" aria-expanded="true">
-                                        <i class="fa fa-minus"></i>
+                                        <span class="fa fa-minus"></span>
                                     </a>
                                 </div>
                             </div>
@@ -44,12 +44,12 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <i class="fa fa-capsules"></i> Camisetas 2020s
+                                <span class="fa fa-capsules"></span> Camisetas 2020s
                             </div>
                             <div class="card-body">
                                 <div class="form-inline float-right">
                                     <a id="addSaleShirt2020Button" asp-action="AddSaleShirt2020" data-title="Adicionar Camisetas 2020" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
-                                        <i class="fa fa-plus"></i> Adicionar Camisetas 2020
+                                        <span class="fa fa-plus"></span> Adicionar Camisetas 2020
                                     </a>
                                 </div>
 
