--- a/_source/LigaCancer/Views/SaleShirt2020/PublicDetailsSaleShirt2020.cshtml
+++ b/_source/LigaCancer/Views/SaleShirt2020/PublicDetailsSaleShirt2020.cshtml
@@ -12,7 +12,7 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fas fa-info"></i> Detalhes <strong>(@Model.Status)</strong>
+                                <span class="fas fa-info"></span> Detalhes <strong>(@Model.Status)</strong>
                             </div>
                             <div class="card-body">
 
