--- a/_source/LigaCancer/Views/Shared/_LoginPartial.cshtml
+++ b/_source/LigaCancer/Views/Shared/_LoginPartial.cshtml
@@ -13,11 +13,11 @@
             <div class="dropdown-menu dropdown-menu-right">
                 <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "Admin" })" method="post">
                     <button type="submit" class="dropdown-item">
-                        <i class="fa fa-lock"></i> Sair
+                        <span class="fa fa-lock"></span> Sair
                     </button>
                 </form>
                 <a asp-area="Identity" asp-page="/Account/Manage/ChangePassword" class="dropdown-item">
-                    <i class="fa fa-user"></i> Trocar Senha
+                    <span class="fa fa-user"></span> Trocar Senha
                 </a>
             </div>
         </li>
