--- a/_source/LigaCancer/Views/User/Partials/_AddUser.cshtml
+++ b/_source/LigaCancer/Views/User/Partials/_AddUser.cshtml
@@ -8,6 +8,7 @@
             <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
+
         <div class="form-group">
             <label asp-for="Role" class="control-label"></label>
             <select asp-for="Role" asp-items="Model.ApplicationRoles" class="form-control">
@@ -15,25 +16,28 @@
             </select>
             <span asp-validation-for="Role" class="text-danger"></span>
         </div>
+
         <div class="form-group">
             <label asp-for="Email" class="control-label"></label>
             <input asp-for="Email" class="form-control" />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
+
         <div class="form-group">
             <label asp-for="Password" class="control-label"></label>
             <div class="input-group">
                 <input asp-for="Password" class="form-control" />
-                <i class="eye-password fas fa-eye-slash eyePassword" />
+                @*<i class="eye-password fas fa-eye-slash eyePassword" />*@
             </div>
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
+
         <div class="form-group">
             <div class="input-group mt-2">
                 <label asp-for="ConfirmPassword" class="control-label"></label>
                 <div class="input-group">
                     <input asp-for="ConfirmPassword" class="form-control" />
-                    <i class="eye-password fas fa-eye-slash eyePassword" />
+                    @*<i class="eye-password fas fa-eye-slash eyePassword" />*@
                 </div>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
