--- a/_source/LigaCancer/Views/Birthday/Index.cshtml
+++ b/_source/LigaCancer/Views/Birthday/Index.cshtml
@@ -66,7 +66,7 @@
                                 <span class="fas fa-address-book"></span> Aniversariantes
                             </div>
                             <div class="card-body">
-                                <table width="100%" class="table table-bordered table-striped text-center" id="birthdayTable"></table>
+                                <table width="100%" class="table table-bordered table-striped text-center" id="birthdayTable" aria-hidden="True" aria-describedby="Tabela de aniversários"></table>
                             </div>
                         </div>
                     </div>
