--- a/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
@@ -41,6 +41,6 @@
             </div>
         }
 
-        <table width="100%" class="table table-bordered table-striped text-center" id="familyMemberTable"></table>
+        <table width="100%" class="table table-bordered table-striped text-center" id="familyMemberTable" aria-describedby="Tabela de membros familiares"></table>
     </div>
 </div>
