--- a/_source/LigaCancer/Views/FileAttachment/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FileAttachment/Partials/_Index.cshtml
@@ -20,6 +20,6 @@
             </a>
         </div>
 
-        <table width="100%" class="table table-bordered table-striped text-center" id="attachmentsTable"></table>
+        <table width="100%" class="table table-bordered table-striped text-center" id="attachmentsTable" aria-describedby="Tabela de arquivos anexados"></table>
     </div>
 </div>
