--- a/_source/LigaCancer/Views/Patient/Print.cshtml
+++ b/_source/LigaCancer/Views/Patient/Print.cshtml
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="row">
             <div class="col-3">
-                <img class="logo" src="~/img/logo/logo-oficial.png" width="150" />
+                <img class="logo" alt="Logotipo RVCC" src="~/img/logo/logo-oficial.png" width="150" />
             </div>
 
             <div class="col-9 text-center">
@@ -176,7 +176,7 @@
             <div class="col-12">
                 <hr class="w-100" />
 
-                <table class="table table-bordered text-center">
+                <table class="table table-bordered text-center" aria-hidden="true">
                     <thead>
                         <tr>
                             <th scope="col">Numero</th>
@@ -207,7 +207,7 @@
 
             <div class="col-12">
                 <hr class="w-100" />
-                <table class="table table-bordered text-center">
+                <table class="table table-bordered text-center" aria-hidden="true">
                     <thead>
                         <tr>
                             <th scope="col">Rua</th>
@@ -249,7 +249,7 @@
             <div class="col-12">
                 <hr class="w-100" />
 
-                <table class="table table-bordered text-center">
+                <table class="table table-bordered text-center" aria-hidden="true">
                     <thead>
                         <tr>
                             <th scope="col">Nome</th>
@@ -287,7 +287,7 @@
                 <div class="col-12">
                     <hr class="w-100" />
 
-                    <table class="table table-bordered text-center">
+                    <table class="table table-bordered text-center" aria-hidden="true">
                         <thead>
                             <tr>
                                 <th scope="col">Data</th>
@@ -320,7 +320,7 @@
                 <div class="col-12">
                     <hr class="w-100" />
 
-                    <table class="table table-bordered text-center">
+                    <table class="table table-bordered text-center" aria-hidden="true">
                         <thead>
                             <tr>
                                 <th scope="col">Beneficio</th>
@@ -355,7 +355,7 @@
                 <div class="col-12">
                     <hr class="w-100" />
 
-                    <table class="table table-bordered text-center">
+                    <table class="table table-bordered text-center" aria-hidden="true">
                         <thead>
                             <tr>
                                 <th scope="col">Data</th>
@@ -390,7 +390,7 @@
                 <div class="col-12">
                     <hr class="w-100" />
 
-                    <table class="table table-bordered text-center">
+                    <table class="table table-bordered text-center" aria-hidden="true">
                         <thead>
                             <tr>
                                 <th scope="col">Nome</th>
