--- a/_source/LigaCancer/Views/PatientBenefit/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/PatientBenefit/Partials/_Index.cshtml
@@ -10,6 +10,6 @@
     </div>
 
     <div class="card-body collapse" id="patientBenefitCollapse">
-        <table width="100%" class="table table-bordered table-striped text-center" id="patientBenefitTable"></table>
+        <table width="100%" class="table table-bordered table-striped text-center" id="patientBenefitTable" aria-describedby="Tabela de beneficios do paciente"></table>
     </div>
 </div>
