--- a/_source/LigaCancer/Views/Presence/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Partials/_Index.cshtml
@@ -10,6 +10,6 @@
     </div>
 
     <div class="card-body collapse" id="presenceCollapse">
-        <table width="100%" class="table table-bordered table-striped text-center" id="presenceTable"></table>
+        <table width="100%" class="table table-bordered table-striped text-center" id="presenceTable" aria-describedby="Tabela de presenças do paciente"></table>
     </div>
 </div>
