--- a/_source/LigaCancer/Views/SaleShirt2020/Partials/_DetailsSaleShirt2020.cshtml
+++ b/_source/LigaCancer/Views/SaleShirt2020/Partials/_DetailsSaleShirt2020.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RVCC.Models.FormModel.SaleShirt2020FormModel
 
-<iframe src="@Url.Action("PublicDetails", "SaleShirt2020", new { code = Model.Code })" name="printDoc" id="printDoc" style="position: absolute; left: 9999px"></iframe>
+<iframe src="@Url.Action("PublicDetails", "SaleShirt2020", new { code = Model.Code })" name="printDoc" id="printDoc" style="position: absolute; left: 9999px" title="Imprimir dados de compra da camiseta vendida"></iframe>
 
 <div class="modal-body">
     <div class="row">
