--- a/_source/LigaCancer/Views/Benefit/Index.cshtml
+++ b/_source/LigaCancer/Views/Benefit/Index.cshtml
@@ -66,7 +66,7 @@
                                     </a>
                                 </div>
 
-                                <table width="100%" class="table table-bordered table-striped text-center" id="benefitTable"></table>
+                                <table width="100%" class="table table-bordered table-striped text-center" id="benefitTable" aria-describedby="Tabela de benefícios"></table>
                             </div>
                         </div>
                     </div>
