--- a/_source/LigaCancer/Views/CancerType/Index.cshtml
+++ b/_source/LigaCancer/Views/CancerType/Index.cshtml
@@ -66,7 +66,7 @@
                                     </a>
                                 </div>
 
-                                <table width="100%" class="table table-bordered table-striped text-center" id="cancerTypeTable"></table>
+                                <table width="100%" class="table table-bordered table-striped text-center" id="cancerTypeTable" aria-describedby="Tabela de tipos de cânceres"></table>
                             </div>
                         </div>
                     </div>
