--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -69,7 +69,7 @@
                                     </a>
                                 </div>
 
-                                <table width="100%" class="table table-bordered table-striped text-center" id="doctorTable"></table>
+                                <table width="100%" class="table table-bordered table-striped text-center" id="doctorTable" aria-describedby="Tabela de médicos"></table>
                             </div>
                         </div>
                     </div>
