--- a/_source/LigaCancer/Views/User/Index.cshtml
+++ b/_source/LigaCancer/Views/User/Index.cshtml
@@ -66,7 +66,7 @@
                                     </a>
                                 </div>
 
-                                <table width="100%" class="table table-bordered table-striped text-center" id="userTable"></table>
+                                <table width="100%" class="table table-bordered table-striped text-center" id="userTable" aria-describedby="Tabela de usuários"></table>
                             </div>
                         </div>
                     </div>
