--- a/_source/LigaCancer/Views/User/Partials/_AddUser.cshtml
+++ b/_source/LigaCancer/Views/User/Partials/_AddUser.cshtml
@@ -27,7 +27,7 @@
             <label asp-for="Password" class="control-label"></label>
             <div class="input-group">
                 <input asp-for="Password" class="form-control" />
-                @*<i class="eye-password fas fa-eye-slash eyePassword" />*@
+                @*<span class="eye-password fas fa-eye-slash eyePassword"><span/>*@
             </div>
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
@@ -37,7 +37,7 @@
                 <label asp-for="ConfirmPassword" class="control-label"></label>
                 <div class="input-group">
                     <input asp-for="ConfirmPassword" class="form-control" />
-                    @*<i class="eye-password fas fa-eye-slash eyePassword" />*@
+                    @*<span class="eye-password fas fa-eye-slash eyePassword" ></span>*@
                 </div>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
