--- a/_source/LigaCancer/Views/Benefit/Index.cshtml
+++ b/_source/LigaCancer/Views/Benefit/Index.cshtml
@@ -57,7 +57,7 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <span class="fa fa-capsules"></span> Benefícios
+                                <span class="fa fa-clipboard"></span> Benefícios
                             </div>
                             <div class="card-body">
                                 <div class="form-inline float-right">
