--- a/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/Partials/_Index.cshtml
@@ -3,7 +3,7 @@
 
 <div class="card">
     <div class="card-header" data-toggle="collapse" data-target="#familyMemberCollapse" aria-expanded="true">
-        <span class="fa fa-male"></span>Membros Familiares
+        <span class="fa fa-child"></span>Membros Familiares
 
         <div class="card-header-actions">
             <a class="card-header-action btn-minimize" href="#">
