--- a/_source/LigaCancer/Views/FileAttachment/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/FileAttachment/Partials/_Index.cshtml
@@ -2,7 +2,7 @@
 
 <div class="card">
     <div class="card-header" data-toggle="collapse" data-target="#filesCollapse" aria-expanded="true">
-        <span class="fa fa-male"></span>Arquivos
+        <span class="fa fa-file"></span>Arquivos
 
         <div class="card-header-actions">
             <a class="card-header-action btn-minimize" href="#">
