--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -166,7 +166,7 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <span class="fa fa-male"></span> Pacientes
+                                <span class="fa fa-person"></span> Pacientes
                             </div>
                             <div class="card-body">
                                 @if (!User.IsInRole(Roles.SocialAssistance))
