--- a/_source/LigaCancer/Views/Patient/Print.cshtml
+++ b/_source/LigaCancer/Views/Patient/Print.cshtml
@@ -117,7 +117,7 @@
             </div>
 
             <div class="col-12 d-flex">
-                <label class="d-flex align-items-end font-weight-bold m-0 pr-2">Cancêres:</label>
+                <label class="d-flex align-items-end font-weight-bold m-0 pr-2">Cânceres:</label>
                 <span class="d-flex align-items-end">@string.Join(", ", Model.CancerTypes)</span>
             </div>
 
