--- a/_source/LigaCancer/Views/PatientBenefit/Index.cshtml
+++ b/_source/LigaCancer/Views/PatientBenefit/Index.cshtml
@@ -76,7 +76,7 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <span class="fas fa-address-book"></span> @ViewData["Title"]
+                                <span class="fas fa-gift"></span> @ViewData["Title"]
                             </div>
                             <div class="card-body">
                                 <div class="form-inline float-right">
