--- a/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Phone/Partials/_Index.cshtml
@@ -3,7 +3,7 @@
 
 <div class="card">
     <div class="card-header" data-toggle="collapse" data-target="#phoneCollapse" aria-expanded="true">
-        <span class="fa fa-male"></span>Telefones
+        <span class="fa fa-phone"></span>Telefones
 
         <div class="card-header-actions">
             <a class="card-header-action btn-minimize" href="#">
