--- a/_source/LigaCancer/Views/SaleShirt2020/Index.cshtml
+++ b/_source/LigaCancer/Views/SaleShirt2020/Index.cshtml
@@ -44,7 +44,7 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <span class="fa fa-capsules"></span> Camisetas 2020s
+                                <span class="fa fa-shirt"></span> Camisetas 2020s
                             </div>
                             <div class="card-body">
                                 <div class="form-inline float-right">
