--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -44,13 +44,13 @@
                     <li class="nav-title">Pacientes</li>
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="Patient" class="nav-link">
-                            <span class="nav-icon fa fa-male"></span> Pacientes
+                            <span class="nav-icon fa fa-person"></span> Pacientes
                         </a>
                     </li>
 
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="Birthday" class="nav-link">
-                            <span class="nav-icon far fa-address-book"></span> Aniversariantes
+                            <span class="nav-icon far fa-calendar-days"></span> Aniversariantes
                         </a>
                     </li>
 
@@ -78,7 +78,7 @@
                         <li class="nav-title">Estadias</li>
                         <li class="nav-item">
                             <a asp-action="Index" asp-controller="Stay" class="nav-link">
-                                <span class="nav-icon fa fa-gift"></span> Estadias
+                                <span class="nav-icon fa fa-hotel"></span> Estadias
                             </a>
                         </li>
 
@@ -138,7 +138,7 @@
                         <li class="nav-title">Camisetas</li>
                         <li class="nav-item">
                             <a asp-action="Index" asp-controller="SaleShirt2020" class="nav-link">
-                                <span class="nav-icon fa fa-male"></span> Camisetas 2020
+                                <span class="nav-icon fa fa-shirt"></span> Camisetas 2020
                             </a>
                         </li>
                     }
