--- a/_source/LigaCancer/Views/Stay/Index.cshtml
+++ b/_source/LigaCancer/Views/Stay/Index.cshtml
@@ -76,7 +76,7 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <span class="fas fa-address-book"></span> Estadias
+                                <span class="fas fa-hotel"></span> Estadias
                             </div>
                             <div class="card-body">
                                 <div class="form-inline float-right">
