--- a/_source/LigaCancer/Views/Address/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Address/Partials/_Index.cshtml
@@ -3,7 +3,7 @@
 
 <div class="card">
     <div class="card-header" data-toggle="collapse" data-target="#addressCollapse" aria-expanded="true">
-        <span class="fa fa-male"></span>Endereços
+        <span class="fa fa-address-book"></span>Endereços
 
         <div class="card-header-actions">
             <a class="card-header-action btn-minimize" href="#">
