--- a/_source/LigaCancer/Views/Birthday/Index.cshtml
+++ b/_source/LigaCancer/Views/Birthday/Index.cshtml
@@ -63,7 +63,7 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <span class="fas fa-address-book"></span> Aniversariantes
+                                <span class="fas fa-calendar-days"></span> Aniversariantes
                             </div>
                             <div class="card-body">
                                 <table class="table table-bordered table-striped text-center" id="birthdayTable" aria-hidden="True" aria-describedby="Tabela de aniversários"></table>
