--- a/_source/LigaCancer/Views/Patient/Details.cshtml
+++ b/_source/LigaCancer/Views/Patient/Details.cshtml
@@ -174,7 +174,7 @@
                                     <div class="col-4">
                                         <div class="list-group" id="list-tab" role="tablist">
                                             <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="tab" href="#list-home"
-                                               role="tab" aria-controls="list-home" aria-selected="true">Cancêres</a>
+                                               role="tab" aria-controls="list-home" aria-selected="true">Cânceres</a>
                                             <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="tab" href="#list-profile"
                                                role="tab" aria-controls="list-profile" aria-selected="false">Remédios</a>
                                             <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="tab" href="#list-messages"
