--- a/_source/LigaCancer/Views/Patient/Partials/_AddSocialObservation.cshtml
+++ b/_source/LigaCancer/Views/Patient/Partials/_AddSocialObservation.cshtml
@@ -13,7 +13,16 @@
         <div class="form-row">
             <div class="form-group col-md-12">
                 <label asp-for="Observations" class="control-label"></label>
-                <textarea asp-for="Observations" rows="10" class="form-control"></textarea>
+                
+                @if (User.IsInRole(Roles.SocialAssistance))
+                {
+                    <textarea asp-for="Observations" rows="10" class="form-control"></textarea>
+                }
+                else
+                {
+                    <textarea asp-for="Observations" rows="10" class="form-control" disabled="disabled"></textarea>
+                }
+
                 <span asp-validation-for="Observations" class="text-danger"></span>
             </div>
 
