--- a/_source/LigaCancer/Views/PatientBenefit/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/PatientBenefit/Partials/_Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="card">
     <div class="card-header" data-toggle="collapse" data-target="#patientBenefitCollapse" aria-expanded="true">
-        <span class="fa fa-male"></span>Benefícios
+        <span class="fa fa-gift"></span>Benefícios
 
         <div class="card-header-actions">
             <a class="card-header-action btn-minimize" href="#">
