--- a/_source/LigaCancer/Views/Presence/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Partials/_Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="card">
     <div class="card-header" data-toggle="collapse" data-target="#presenceCollapse" aria-expanded="true">
-        <span class="fa fa-male"></span>Presenças
+        <span class="fa fa-address-book"></span>Presenças
 
         <div class="card-header-actions">
             <a class="card-header-action btn-minimize" href="#">
