--- a/_source/LigaCancer/Views/Stay/Partials/_Index.cshtml
+++ b/_source/LigaCancer/Views/Stay/Partials/_Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="card">
     <div class="card-header" data-toggle="collapse" data-target="#stayCollapse" aria-expanded="true">
-        <span class="fa fa-male"></span>Estadias
+        <span class="fa fa-hotel"></span>Estadias
 
         <div class="card-header-actions">
             <a class="card-header-action btn-minimize" href="#">
